fix contacts z-index

--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -20,6 +20,8 @@
 		border-radius: 42px;
 		background: #FFF;
 		box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.08), 0 0 4px 0 rgba(0, 0, 0, 0.04);
+        position: relative;
+        z-index: 100;
 
         &__item {
             border-radius: 30px;
